# DataAnalysis-discord-bot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: message_data_cache.csv
src/: __init__.py  main.py
src/cogs/: alias.py  chat_data.py  image_data.py  links.json  markov_chain.py
src/utils/: __init__.py  date_parser.py  img_scraper.py  util.py
